# fitbit-air-dashboard

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  SCORING.md  alembic.ini  composer.json  docker-compose.dev.yml  docker-compose.yml  drizzle.config.ts  modules_statuses.json  next.config.ts  package-lock.json  package.json  phpunit.xml  pyproject.toml  tsconfig.json  vite.config.js
Modules/GoogleHealth/: composer.json  module.json
Modules/GoogleHealth/config/: config.php
Modules/GoogleHealth/routes/: api.php  web.php
app/Domain/Analytics/: DashboardProjectionService.php  HealthDataService.php  InsightsService.php  ScoringService.php
app/Domain/Coach/: CoachService.php  HttpResponsesProvider.php  (+1 more)
app/Jobs/: SyncHealthData.php
app/Models/: CoachMessage.php  CoachThread.php  DailyMetric.php  DailyScore.php  DataQuality.php  Exercise.php  FoodLog.php  Goal.php  HealthRecord.php  JournalEntry.php  LegacyModel.php  Meta.php  StrengthSession.php  StrengthSet.php  SyncCursor.php  SyncState.php  TimelineEvent.php  Token.php  WriteOperation.php
app/Providers/: AppServiceProvider.php
app/Support/: Rows.php
apps/web/: next.config.ts  package.json
bootstrap/: app.php
config/: database.php  lifestats.php
database/migrations/: 2026_07_21_000000_create_lifestats_schema.php
db/migrations/: 001_initial.sql
docker/: Caddyfile  api.Dockerfile  entrypoint.sh  web.Dockerfile
docs/: ARCHITECTURE.md  DATABASE.dbml  DATABASE_V2.dbml  GOOGLE_HEALTH_CLONE_PLAN.md  GOOGLE_HEALTH_DATA_TYPES.md  GOOGLE_HEALTH_SYNC_DESIGN.md  GOOGLE_HEALTH_V2_IMPLEMENTATION_PLAN.md  UI_UX_SYSTEM_DESIGN.md
drizzle/: schema.ts
drizzle/migrations/: 0000_sharp_valkyrie.sql  0001_groovy_cobalt_man.sql  0002_wakeful_warstar.sql  0003_food_logs.sql  0004_health_coach.sql
frontend/: package-lock.json  package.json
frontend/.next/: BUILD_ID  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.js  required-server-files.json  trace  trace-build
frontend/app/: globals.css  layout.tsx  page.tsx
resources/css/: app.css
resources/js/: app.tsx
resources/views/: app.blade.php
routes/: console.php  web.php
src/: cli-sync.js  config.js  db.js  healthClient.js  oauth.js  proxy.ts  server.js  sync.js
src/app/: globals.css  layout.tsx  page.tsx
src/lib/: auth.ts  client.ts  coach.ts  config.ts  crypto.ts  db.ts  health-data.ts  health.ts  oauth.ts  scoring.ts  sync.ts  utils.ts
src/types/: index.ts
tests/Feature/: AuthenticationTest.php  DashboardAccessTest.php  HealthLogCrudTest.php  NutritionLogTest.php  SchemaMigrationSafetyTest.php
tests/Support/: AuthenticatesHealthUser.php  ConfiguresFeatureTest.php
(+394 files in other folders)
