[project]
name = "lifestats"
version = "1.0.0"
description = "Private Google Health companion"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.16,<2",
  "asyncpg>=0.30,<1",
  "celery[redis]>=5.5,<6",
  "cryptography>=45,<47",
  "email-validator>=2.2,<3",
  "fastapi>=0.116,<1",
  "google-auth[requests]>=2.40,<3",
  "httpx>=0.28,<1",
  "pwdlib[argon2]>=0.2,<1",
  "pydantic-settings>=2.10,<3",
  "sqlalchemy[asyncio]>=2.0.41,<3",
  "uvicorn[standard]>=0.35,<1",
]

[project.scripts]
app = "src.main:run"
google-health-subscriber = "src.modules.google_health.subscriber_cli:run"

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21,<1",
  "mypy>=1.16,<2",
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.0,<2",
  "ruff>=0.12,<1",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
packages = ["src"]
mypy_path = "apps/api"

[[tool.mypy.overrides]]
module = "celery.*"
ignore_missing_imports = true
disallow_untyped_decorators = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests"]
pythonpath = ["apps/api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps/api/src"]
